2012-07-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Further code homogenization.

	* src/ftview.c (Render_Stroke): Stroker contructor and destructor
	are moved to...
	* src/ftcommon.c (FTDemo_New, FTDemo_Done): Here.
	* src/ftcommon.h (FTDemo_Handle): New field `stroker'.

2012-07-11  Werner Lemberg  <wl@gnu.org>

	Avoid crashes in case of failure.

	* src/ftcommon.c (FTDemo_Draw_Slot), src/ftgrid.c
	(grid_status_draw_outline), src/ftview.c (Render_Stroke): Only call
	`FT_Done_Glyph' in case of success.

2012-07-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Clean up and homogenize the code.

        * src/ftview.c (Render_Stroke): Replace while-loop with for-loop.
	(Render_Slanted): Ditto.
	(Render_Enbolden): Ditto.
	(Render_All): Ditto.
	(Render_Waterfall): Ditto.
	(Render_Stroke): Homogenize with other similar functions.
	(Render_Text): Code cleanup.
	(event_gamma_grid): Ditto.

2012-06-15  Werner Lemberg  <wl@gnu.org>

	* Version 2.4.10 released.
	==========================


	Tag sources with `VER-2-4-10'.

	* README: Updated.

2012-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Implement handling of FT_Outline_EmboldenXY.

	* src/ftview.c (status): Replace `bold_factor' with `xbold_factor'
	and `ybold_factor'.
	(Render_Embolden): Updated.
	(Process_Event): Replacing handling of `e', `E' keys with `x', `X',
	`y', and `Y'.
	(event_bold_change): Implement it.
	(event_help): Updated.

2012-03-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Improve spacing for bold rendering mode.

	* src/ftview.c (Render_Embolden): Fix algorithm to reduce spacing.

2012-03-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.4.9 released.
	=========================


	Tag sources with `VER-2-4-9' (the previous commit has this tag).

	* README: Updated.

2012-03-03  Werner Lemberg  <wl@gnu.org>

	[ftstring] Fix display of kern compare mode.

	* src/ftstring.c (main) <RENDER_MODE_KERNCMP>: Fix scaling of
	`height'.
